--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry kind="lib" path="test/lib/testng-6.8.jar"/>
 	<classpathentry kind="lib" path="test/lib/derby-10.6.1.0.jar"/>
 	<classpathentry kind="lib" path="test/lib/testquery.jar"/>
-	<classpathentry kind="lib" path="lib/rhino-1.7R3.jar"/>
+	<classpathentry kind="lib" path="lib/rhino-1.7.6.jar"/>
 	<classpathentry kind="lib" path="test/lib/logback-classic-1.0.0.jar"/>
 	<classpathentry kind="lib" path="test/lib/logback-core-1.0.0.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate41/hibernate-core-4.1.0.Final.jar"/>
