--- a/.classpath
+++ b/.classpath
@@ -16,9 +16,9 @@
 	<classpathentry kind="lib" path="lib/spring31/org.springframework.context-3.1.1.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring31/org.springframework.core-3.1.1.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring31/org.springframework.beans-3.1.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="../ojdbc6-11.2.0.3.jar"/>
-	<classpathentry kind="lib" path="../mysql-connector-java-5.1.20-bin.jar"/>
 	<classpathentry kind="lib" path="test/lib/fest-assert-core-2.0M8.jar"/>
 	<classpathentry kind="lib" path="test/lib/fest-util-1.2.3.jar"/>
+	<classpathentry kind="lib" path="C:/PROJECTS/mysql-connector-java-5.1.36-bin.jar"/>
+	<classpathentry kind="lib" path="C:/PROJECTS/ojdbc7-12.1.0.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
