FunnyScript: Fixed \ escaping problems. $ now escapes the $. Added encoded writing like with groovy so that parameter binding works with database queries. Added imports to the FunnyTemplateCompiler. Added more unit tests for funny templates. Fixed string parsing.

--- a/build.xml
+++ b/build.xml
@@ -172,8 +172,13 @@
 	</target>
 	
 	
-	<target name="pushjar" depends="jar">
+	<target name="tosolidbase" depends="jar">
 		<copy file="${dist.home}/solidstack.jar" preservelastmodified="true" tofile="../solidbase/lib/solidstack-${release.number}.jar" />
+	</target>
+
+
+	<target name="tosnippets" depends="jar">
+		<copy file="${dist.home}/solidstack.jar" preservelastmodified="true" tofile="../snippets/database/dictionary/solidstack.jar" />
 	</target>
 
 
