--- a/build.xml
+++ b/build.xml
@@ -219,7 +219,7 @@
 			check [template]                       dependentOnlyOn java.* javax.* solidstack.* org.slf4j.*
 			check solidstack.script.*              dependentOnlyOn java.* javax.* solidstack.* funny.*
 			check solidstack.template.groovy.*     dependentOnlyOn java.* javax.* solidstack.* groovy.* org.codehaus.groovy.*
-			check solidstack.template.javascript.* dependentOnlyOn java.* javax.* solidstack.* org.mozilla.javascript.*
+			check solidstack.template.javascript.* dependentOnlyOn java.* javax.* solidstack.* funny.* org.mozilla.javascript.*
 			check solidstack.util.*                dependentOnlyOn java.* javax.* solidstack.*
 			check solidstack.xml.*                 dependentOnlyOn java.* javax.* solidstack.*
 	    </dependencyCheck>
