--- a/.classpath
+++ b/.classpath
@@ -16,7 +16,7 @@
 	<classpathentry kind="lib" path="lib/spring31/org.springframework.context-3.1.1.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring31/org.springframework.core-3.1.1.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring31/org.springframework.beans-3.1.1.RELEASE.jar"/>
-	<classpathentry kind="lib" path="test/lib/fest-assert-core-2.0M8.jar"/>
-	<classpathentry kind="lib" path="test/lib/fest-util-1.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-primitives-1.0.jar"/>
+	<classpathentry kind="lib" path="test/lib/assertj-core-1.7.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
