--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Sat Feb 11 12:16:24 CET 2012
 eclipse.preferences.version=1
+encoding//src/solidstack/script/ScriptTokenizer.java=UTF-8
 encoding/<project>=ISO-8859-1
