--- a/build.xml
+++ b/build.xml
@@ -108,7 +108,7 @@
 
 	<taskdef resource="testngtasks" classpathref="testng.classpath" />
 	<taskdef name="groovy" classname="org.codehaus.groovy.ant.Groovy" classpathref="groovy.classpath" />
-	<taskdef name="jarjar" classname="com.tonicsystems.jarjar.JarJarTask" classpathref="jarjar.classpath" />
+	<taskdef name="jarjar" classname="org.pantsbuild.jarjar.JarJarTask" classpathref="jarjar.classpath" />
 	<taskdef resource="tasks.properties" classpathref="cobertura.classpath" />
 	<taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml" classpathref="sonar.classpath" />
 	<taskdef name="dependencyCheck" classname="classycle.ant.DependencyCheckingTask" classpathref="classycle.classpath" />
@@ -118,10 +118,10 @@
 
 	<echo message="Java Version: ${java.version}"/>
 	<echo message="Java home: ${java.home}"/>
-	<fail message="Unsupported Java version: ${java.version}. Let the JAVA_HOME environment variable point to a JDK 1.6.">
+	<fail message="Unsupported Java version: ${java.version}. Let the JAVA_HOME environment variable point to a JDK 1.8.">
 		<condition>
 			<not>
-				<contains string="${java.version}" substring="1.6" casesensitive="false" />
+				<contains string="${java.version}" substring="1.8" casesensitive="false" />
 			</not>
 		</condition>
 	</fail>
